--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,13 +19,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="public/lib/animate/animate.min.css" rel="stylesheet">
+    <link href="public/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="public/assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Stylesheet -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="public/assets/css/style.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
@@ -33,13 +33,13 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="lib/wow/wow.min.js" defer></script>
-    <script src="lib/easing/easing.min.js" defer></script>
-    <script src="lib/waypoints/waypoints.min.js" defer></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js" defer></script>
+    <script src="public/lib/wow/wow.min.js" defer></script>
+    <script src="public/lib/easing/easing.min.js" defer></script>
+    <script src="public/lib/waypoints/waypoints.min.js" defer></script>
+    <script src="public/lib/owlcarousel/owl.carousel.min.js" defer></script>
 
     <!-- Custom JavaScript -->
-    <script src="assets/js/main.js" defer></script>
+    <script src="public/assets/js/main.js" defer></script>
 
     <!-- React App -->
     <script type="module" src="./src/main.jsx"></script>
