--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,17 +31,18 @@
     <div id="root"></div>
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="public/lib/wow/wow.min.js" defer></script>
-    <script src="public/lib/easing/easing.min.js" defer></script>
-    <script src="public/lib/waypoints/waypoints.min.js" defer></script>
-    <script src="public/lib/owlcarousel/owl.carousel.min.js" defer></script>
+    <script type="module" src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script type="module" src="public/lib/wow/wow.min.js" defer></script>
+    <script type="module" src="public/lib/easing/easing.min.js" defer></script>
+    <script type="module" src="public/lib/waypoints/waypoints.min.js" defer></script>
+    <script type="module" src="public/lib/owlcarousel/owl.carousel.min.js" defer></script>
 
     <!-- Custom JavaScript -->
-    <script src="public/assets/js/main.js" defer></script>
+    <script type="module" src="public/assets/js/main.js" defer></script>
+npm run build
 
     <!-- React App -->
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
