--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,9 +40,8 @@
 
     <!-- Custom JavaScript -->
     <script type="module" src="public/assets/js/main.js" defer></script>
-npm run build
 
     <!-- React App -->
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="/main.jsx"></script>
   </body>
 </html>
