--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,6 +42,6 @@
     <script type="module" src="public/assets/js/main.js" defer></script>
 
     <!-- React App -->
-    <script type="module" src="./main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
