--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,41 +7,43 @@
     <meta name="keywords" content="Job Portal, JobEntry, Find Jobs, Hire Candidates">
     <meta name="author" content="Your Name or Company">
     <title>JobEntry - Job Portal Website Template</title>
-    
+
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link rel="icon" href="/img/favicon.ico">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap" rel="stylesheet">
 
     <!-- Icon Fonts -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/lib/animate/animate.min.css">
+    <link rel="stylesheet" href="/lib/owlcarousel/assets/owl.carousel.min.css">
+
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 
     <!-- Custom Stylesheet -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/style.css">
   </head>
+  
   <body>
     <div id="root"></div>
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="lib/wow/wow.min.js" defer></script>
-    <script src="lib/easing/easing.min.js" defer></script>
-    <script src="lib/waypoints/waypoints.min.js" defer></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js" defer></script>
+    <script src="/lib/wow/wow.min.js" defer></script>
+    <script src="/lib/easing/easing.min.js" defer></script>
+    <script src="/lib/waypoints/waypoints.min.js" defer></script>
+    <script src="/lib/owlcarousel/owl.carousel.min.js" defer></script>
 
     <!-- Custom JavaScript -->
-    <script src="assets/js/main.js" defer></script>
+    <script src="/assets/js/main.js" defer></script>
 
-    <!-- React App -->
-    <script type="module" src="./src/main.jsx"></script>
+    <!-- React App (Vite Injects This Automatically) -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
