--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,6 +42,10 @@
 
     <!-- Custom JavaScript -->
     <script src="/assets/js/main.js" defer></script>
+    <script>
+      console.log("jQuery Loaded?", typeof jQuery);
+    </script>
+    
 
     <!-- React App (Vite Injects This Automatically) -->
     <script type="module" src="/src/main.jsx"></script>
